@@ -321,7 +321,9 @@ view.fracFontMetrics=false
 view.docking.alternateLayout=false
 view.toolbar.alternateLayout=false
 
-# Status bar
+#{{{ Status bar
+view.status.foreground=black
+view.status.background=white
 view.status.visible=true
 view.status.show-caret-status=true
 view.status.show-edit-mode=true
@@ -333,8 +335,10 @@ view.status.show-rect-select=true
 view.status.show-overwrite=true
 view.status.show-line-seperator=true
 view.status.show-memory=true
+view.status.show-clock=false
 view.status.memory.foreground=#cccccc
 view.status.memory.background=#666699a
+#}}}
 
 #}}}
 
