@@ -48,6 +48,18 @@ public class StatusBarOptionPane extends AbstractOptionPane
 		statusVisible.addActionListener(new ActionHandler());
 		addComponent(statusVisible);
 
+		/* Foreground color */
+		addComponent(jEdit.getProperty("options.status.foreground"),
+			foregroundColor = new ColorWellButton(
+			jEdit.getColorProperty("view.status.foreground")),
+			GridBagConstraints.VERTICAL);
+
+		/* Background color */
+		addComponent(jEdit.getProperty("options.status.background"),
+			backgroundColor = new ColorWellButton(
+			jEdit.getColorProperty("view.status.background")),
+			GridBagConstraints.VERTICAL);
+
 		/* Caret status */
 		showCaretStatus = new JCheckBox(jEdit.getProperty(
 			"options.status.show-caret-status"));
@@ -131,6 +143,14 @@ public class StatusBarOptionPane extends AbstractOptionPane
 			jEdit.getColorProperty("view.status.memory.background")),
 			GridBagConstraints.VERTICAL);
 
+		/* Clock */
+		showClock = new JCheckBox(jEdit.getProperty(
+			"options.status.show-clock"));
+		showClock.setSelected(jEdit.getBooleanProperty(
+			"view.status.show-clock"));
+		showClock.addActionListener(new ActionHandler());
+		addComponent(showClock);
+
 		updateEnabled();
 	} //}}}
 
@@ -139,6 +159,10 @@ public class StatusBarOptionPane extends AbstractOptionPane
 	{
 		jEdit.setBooleanProperty("view.status.visible",
 			statusVisible.isSelected());
+		jEdit.setColorProperty("view.status.foreground",foregroundColor
+			.getSelectedColor());
+		jEdit.setColorProperty("view.status.background",backgroundColor
+			.getSelectedColor());
 		jEdit.setBooleanProperty("view.status.show-caret-status",
 			showCaretStatus.isSelected());
 		jEdit.setBooleanProperty("view.status.show-edit-mode",
@@ -163,10 +187,14 @@ public class StatusBarOptionPane extends AbstractOptionPane
 			.getSelectedColor());
 		jEdit.setColorProperty("view.status.memory.background",memBackgroundColor
 			.getSelectedColor());
+		jEdit.setBooleanProperty("view.status.show-clock",
+			showClock.isSelected());
 	} //}}}
 
 	//{{{ Private members
 	private JCheckBox statusVisible;
+	private ColorWellButton foregroundColor;
+	private ColorWellButton backgroundColor;
 	private JCheckBox showCaretStatus;
 	private JCheckBox showEditMode;
 	private JCheckBox showFoldMode;
@@ -179,6 +207,7 @@ public class StatusBarOptionPane extends AbstractOptionPane
 	private JCheckBox showMemory;
 	private ColorWellButton memForegroundColor;
 	private ColorWellButton memBackgroundColor;
+	private JCheckBox showClock;
 
 	private void updateEnabled()
 	{
